<resources>
    <string name="app_name">BlueChatApp</string>
    <string name="select_Devices">Select device</string>
    <string name="title_chat_list">Chats</string>
    <string name="start_chat">Start Chat</string>
    <string name="welcome_msg">Welcome to BlueChatApp</string>
    <string name="no_bluetooth_error">Sorry your device does not support Bluetooth</string>
    <string name="enable_bluetooth">Bluetooth is turned off</string>
    <string name="turn_on">Turn on</string>
    <string name="empty_chat_list">Your chat list is empty</string>
    <string name="start_new_chat">Start new chat</string>
    <string name="enable_bluetooth_error">To be able to chat you need to enable bluetooth</string>
    <string name="msg_scan_for_device">Can\'t find a device?</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning…</string>
    <string name="no_devices_found">No devices found</string>
    <string name="try_again">Try again</string>
    <string name="enable_location_permt_warning">to be able to use Bluetooth chatting, you need first to accept the location permission</string>
    <string name="msg_make_discoverable">Other devices can\'t find you?</string>
    <string name="make_discoverable">Discoverable</string>


</resources>