<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Type a massage"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/btn_send"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/send_btn" />
    </LinearLayout>

</LinearLayout>