...
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_start_chat_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

...
            android:fontFamily="monospace"
            android:text="@string/welcome_msg"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_start_chat"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:fontFamily="monospace"
...
