<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_start_chat"
        android:icon="@drawable/ic_start_chat"
        android:title="@string/start_new_chat"
        app:showAsAction="ifRoom" />
</menu>